<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.coen268.homework1.MainActivity"
    tools:showIn="@layout/activity_main">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/payment_text"
            android:id="@+id/textView3"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_marginTop="20dp"
            android:textSize="15dp" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="0"
            android:id="@+id/payment"
            android:layout_row="0"
            android:layout_column="2"
            android:textStyle="bold|italic"
            android:textSize="30dp"
            android:textColor="#ad0303"
            android:textAlignment="center"
            android:layout_gravity="fill_horizontal"
            android:layout_columnSpan="3"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/amount_text"
            android:id="@+id/textView4"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginTop="30dp"
            android:layout_columnSpan="2"
            android:textSize="15dp" />

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/amount"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_marginTop="30dp"
            android:layout_columnSpan="3"
            android:textStyle="italic"
            android:textAlignment="center"
            android:textSize="15dp"
            android:hint="@string/enter_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/rate_text"
            android:id="@+id/textView5"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_marginTop="20dp"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/interestVal"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_marginTop="20dp"
            android:textStyle="bold|italic"
            android:textSize="15dp"
            android:layout_marginLeft="5dp" />

        <SeekBar
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_marginTop="20dp"
            android:indeterminate="false"
            android:max="100"
            android:progress="50"
            android:layout_columnSpan="4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/year_text"
            android:id="@+id/textView6"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_marginTop="20dp"
            android:layout_columnSpan="2"
            android:textSize="15dp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_columnSpan="3"
            android:baselineAligned="false"
            android:id="@+id/radioGroup"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="0.6"
                android:scaleY="0.6"
                android:text="7"
                android:id="@+id/radioButton1"
                android:checked="false"
                android:textSize="20dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="0.6"
                android:scaleY="0.6"
                android:text="15"
                android:id="@+id/radioButton2"
                android:checked="false"
                android:textSize="20dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="0.6"
                android:scaleY="0.6"
                android:text="30"
                android:id="@+id/radioButton3"
                android:checked="true"
                android:textSize="20dp" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/taxes_text"
            android:id="@+id/textView7"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_marginTop="20dp"
            android:layout_columnSpan="3"
            android:textSize="15dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox"
            android:layout_row="4"
            android:layout_column="3"
            android:checked="true"
            android:layout_marginTop="20dp" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/calculate_text"
            android:id="@+id/button"
            android:layout_row="5"
            android:layout_column="0"
            android:textColor="#FFFFFF"
            android:textSize="15dp"
            android:layout_columnSpan="6"
            android:background="#ad0303"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="20dp" />



    </GridLayout>
</RelativeLayout>
